# Copyright Ian Stewart 2024, All Rights Reserved.
[package]
name = "sol_window_module_winit"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
sol_runtime = { path = "../../../../common/libraries/runtime" }
sol_window_module_interface = { path = "../interface" }
winit = "*"

[lib]
crate-type = ["cdylib"]
