# Copyright Ian Stewart 2024, All Rights Reserved.
[package]
name = "sol_physics_implementation"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
sol_runtime = { path = "../../../libraries/runtime" }
sol_physics_interface = { path = "../interface" }
mimalloc = { version = "0.1.34", default-features = false }

[lib]
crate-type = ["cdylib"]
